feat: support exactly once write and concurrent partition write at the same time